# decision-trees

./: .gitignore  README.md  pyproject.toml
decision_trees/: main.py  metrics.py  tree.py
decision_trees/doctest-output/: round-table.gv
tests/: test_math.py
tests/res/: data.csv
