[tool.poetry]
name = "decision-trees"
version = "0.1.0"
description = ""
authors = ["Grzegorz Płaczek <g01.placzek@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_trees"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
graphviz = ">=0.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analysis = "decision_trees.main:main"
